v0.8.13
	+ Revert recode changes introduced in 0.8.12.
	+ Add completion for /WINDOW SERVER.
	+ Support for reading kicks/msgs from TARGMAX/MAXTARGETS 005 tokens.
	+ Enhancements to the redirections code.
	+ Support for RPL_WHOISACTUALLY (338 numeric) for both ratbox and ircu
	  (bug #428).
	+ -idle option of /notify is gone.
	+ /layout save now makes window-channel bindings instantly effective
	  (bug #35).
	+ /ping without arguments does not send anymore a ctcp ping to a channel
	  (bug #542).
	+ Track IRC operator status of nicks a bit better.
	+ new 'actlist_names' option to add active items names in 'act'
	  statusbar item.
	+ new 'word_completion_backward' command to scroll backwards in the
	  completion list.
	+ add 'list' option to /bind to print all the available commands.
	+ show setter/time in +I lists
	+ apply -usermode before -autosendcmd (bug #548).
	+ reduce memory usage of the scrollback buffer and make the display
	  in /sb status more accurate (higher).
	+ fix data getting dropped when a lot is sent at a time (e.g. when
	  attaching to irssi-proxy, bug #528).
	+ introduce the type Irssi::Irc::Client and signals to communicate with
	  proxy clients to allow for scripting parts of the irssi-proxy.
	- fix leak with $L expando.
	- fix possible crash with /script reset.
	- ignore exceptions take precedence over ignores in all cases.
	- honour -channels preference for ignore -replies (bug #227).
	- Fix mode display in whois with unreal (379 numeric) (bug #479).
	- Fix regressions that prevented external modules from building/working
	  (bugs #537 #539).
	- Fix /set hilight_level not taking effect immediately (bug #598).

v0.8.12 2007-10-06  The Irssi team <staff@irssi.org>
	+ Some changes to character set recoding.
	+ Rewrite SSL connection/handshake code.
	+ Remove support for glib 1.x.
	+ Do not send our hostname to the server (bug #488).
	+ Add $tag to 'window' item in default configuration.