@@ -13,7 +13,7 @@ typedef struct _TERM_WINDOW TERM_WINDOW;
 
 #define ATTR_RESET	(ATTR_RESETFG|ATTR_RESETBG)
 
-#define ATTR_NOCOLORS (ATTR_UNDERLINE|ATTR_REVERSE)
+#define ATTR_NOCOLORS (ATTR_UNDERLINE|ATTR_REVERSE|ATTR_BLINK|ATTR_BOLD)
 
 /* terminal types */
 #define TERM_TYPE_8BIT		0 /* normal 8bit text */
